--- a/app/src/main/res/layout/adapter_fact.xml
+++ b/app/src/main/res/layout/adapter_fact.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/box_fact"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@mipmap/box_fact">
 
     <ImageView
         android:id="@+id/fact_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="92dp"
         android:layout_marginStart="92dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintBottom_toTopOf="@+id/fact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/chinese_map" />
+        app:srcCompat="@mipmap/chinese_map" />
 
     <TextView
         android:id="@+id/fact"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="342dp"
+        android:layout_marginBottom="300dp"
         android:layout_marginEnd="66dp"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="255dp"
         android:scrollbars="vertical"
         android:text="TextView"
         android:textColor="@android:color/background_dark"
@@ -37,8 +37,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fact_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
