--- a/app/src/main/res/layout/adapter_word.xml
+++ b/app/src/main/res/layout/adapter_word.xml
@@ -1,35 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="65dp"
-        android:orientation="vertical"
-        android:weightSum="100"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="11dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/CHS"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/ENG"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/word"
+                android:layout_width="wrap_content"
+                android:layout_height="500dp"
+                android:layout_marginBottom="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@mipmap/beef_word" />
+
+            <ImageButton
+                android:id="@+id/word_sound"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="300dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="130dp"
+                android:background="@mipmap/sound_on"
+                app:layout_constraintBottom_toBottomOf="@+id/word"
+                app:layout_constraintEnd_toEndOf="@+id/word"
+                app:layout_constraintHorizontal_bias="0.73"
+                app:layout_constraintStart_toStartOf="@+id/word"
+                app:layout_constraintTop_toTopOf="@+id/word"
+                app:layout_constraintVertical_bias="0.0" />
+        </android.support.constraint.ConstraintLayout>
+
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
