--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spalsh_new"
+    android:background="@mipmap/spalsh_new"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab3">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,19 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/goto_quiz"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="336dp"
+            android:background="@drawable/buttonshape"
+            android:text="QUIZ"
+            android:textColor="#FFFF00"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <ListView
             android:id="@+id/list_word"
-            android:layout_width="325dp"
-            android:layout_height="500dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="52dp"
-            android:layout_marginEnd="31dp"
-            android:layout_marginStart="31dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintHorizontal_bias="0.47"
             app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
@@ -39,7 +49,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="fitEnd"
-                android:src="@drawable/dragon"
+                android:src="@mipmap/dragon"
                 android:theme="@style/AlertDialog.AppCompat.Light"
                 android:visibility="gone" />
 
