--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spalsh_new"
+    android:background="@mipmap/spalsh_new"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab4">
 
     <!-- TODO: Update blank fragment layout -->
@@ -28,7 +28,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:scaleType="fitEnd"
-            android:src="@drawable/dragon"
+            android:src="@mipmap/dragon"
             android:visibility="gone" />
     </RelativeLayout>
 
